fix: item wrapping on mobile

--- a/src/styles/custom/layout/_footer.sass
+++ b/src/styles/custom/layout/_footer.sass
@@ -17,4 +17,5 @@
 
     .links
         display: flex
-        justify-content: space-around
+        flex-wrap: wrap
+        justify-content: flex-end
